<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="#ffffff"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_of_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/priority_number"
            android:layout_marginStart="22dp"
            android:text="@string/title_of_task"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/priority_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/priority_number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_of_task"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="22dp"
            android:text="@string/date"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
